--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 </html>
 
 
-primary color - #D4AF37, #C9A227
+<!-- primary color - #D4AF37, #C9A227
 secondary color - #0F0F0F, #1A1A1A
 Light Background - #F5F5F5
-Dark Background - #121212 , #181818
+Dark Background - #121212 , #181818 -->
